# NCN

./: .gitignore  CMakeLists.txt  README.md  block_chain.cbp  block_chain.depend  block_chain.layout  doxygen.conf  main.cpp  private.pem  public.pem  warnings.txt
block_chain/: Client.cpp  Client.h  Framework.cpp  Framework.h  Listener.cpp  Listener.h  Message.cpp  Message.h  Node.cpp  Node.h  Serializer.cpp  Serializer.h  TransactionManager.cpp  TransactionManager.h  Validator.cpp  Validator.h
database/: Row.cpp  Row.h
html/: AnswerPeersMessage_8h_source.html  AskPeersMessage_8h_source.html  BlockAnswerMessage_8h_source.html  BlockAnswerParser_8h_source.html  BlockAskMessage_8h_source.html  BlockAskParser_8h_source.html  BlockMessage_8h_source.html  BlockParser_8h_source.html  Block_8h_source.html  Chain_8h_source.html  Component_8h_source.html  Config_8h_source.html  Cryptography_8h_source.html  CustomSerializer_8h_source.html  Database_8h_source.html  Element_8h_source.html  Encoding_8h_source.html  Factory_8h_source.html  Framework_8h_source.html  Hash_8h_source.html  Hash__MD5_8h_source.html  JsonCreator_8h_source.html  JsonParser_8h_source.html  MerkleTree_8h_source.html  MessageParser_8h_source.html  Message_8h_source.html  MessagesTransaction_8h_source.html  Metadata_8h_source.html  MoneyTransaction_8h_source.html  NodeState_8h_source.html  Node_8h_source.html  Package_8h_source.html  Parser_8h_source.html  Peer_8h_source.html  PeersAnswerParser_8h_source.html  PeersAskParser_8h_source.html  ProofOfHold_8h_source.html  ProofOfImportance_8h_source.html  ProofOfMinimumAgedStake_8h_source.html  ProofOfStakeTime_8h_source.html  (+247 more)
include/: BlockFactory.h  Component.h  Message.h  RSA.h
latex/: annotated.tex  classAnswerPeersMessage.eps  classAnswerPeersMessage.tex  classAskPeersMessage.eps  classAskPeersMessage.tex  classBlock.eps  classBlock.tex  classBlockAnswerMessage.eps  classBlockAnswerMessage.tex  classBlockAnswerParser.eps  classBlockAnswerParser.tex  classBlockAskMessage.eps  classBlockAskMessage.tex  (+114 more)
(+249 files in other folders)
